find_package(Doxygen REQUIRED)

set(DOXYGEN_PROJECT_NUMBER "${CMAKE_PROJECT_VERSION}")
set(DOXYGEN_PROJECT_NAME ${CMAKE_PROJECT_NAME})
set(DOXYGEN_PROJECT_BRIEF ${CMAKE_PROJECT_DESCRIPTION})
set(DOXYGEN_STRIP_FROM_PATH ${CMAKE_SOURCE_DIR})
set(DOXYGEN_USE_MDFILE_AS_MAINPAGE mainpage.md)

doxygen_add_docs(
    doxygen
    ${CMAKE_SOURCE_DIR}/docs
    ${CMAKE_SOURCE_DIR}/src
    COMMENT "Generating Documentation"
    DEPENDS ALL
)

install (DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/html" DESTINATION share/doc/ff7tk COMPONENT ff7tk_documentation)
